--- a/100-workflows-introduction.qmd
+++ b/100-workflows-introduction.qmd
@@ -2,18 +2,18 @@
 
 ## Introduction 
 
-```{r, results='asis', echo=FALSE}
+```{r workflows-introduction-setup}
+#| results: "asis"
+#| echo: false
 source("_common.R")
-status("polishing")
+status("complete")
 ```
 
 As a data scientist you will never work alone. 
 
-Within a single project a data scientist is likely that you will interact with a range of other people, including but not limited to: one or more project managers, stakeholders and subject matter experts. These experts might come from a single specialism or form a multidisciplinary team, depending on the type of work that you are doing. 
+Within a single project as a data scientist it is likely that you will interact with a range of other people, including but not limited to: one or more project managers, stakeholders and subject matter experts. Depending on the type of work that you are doing, these experts might come from a single specialism or form a multi-disciplinary team. To get your project put into production and working at scale you will likely have to collaborate with data engineers. You're also likely to work closely with other data scientists, reviewing one another's work or collaborating on larger projects. Familiarity with the skills, processes and practices that make for effective collaboration is therefore instrumental to being a successful as a data scientist. 
 
-To get your project put into use and working at scale you will likely have to collaborate with data engineers. You will also work closely with other data scientists, to review one another's work or to collaborate on larger projects.
-
-Familiarity with the skills, processes and practices that make for collaboration is instrumental to being a successful as a data scientist. The aim for this part of the course is to provide you with a structure on how you organise and perform your work, so that you can be a good collaborator to current colleges and your future self.
+The aim for this part of the course is to provide you with a structure on how you organise and perform your work, so that you can be a good collaborator to current colleges and your future self.
 
 This is going to require a bit more effort upfront, but the benefits will compound over time. You will get more done by wasting less time staring quizzically at messy folders of indecipherable code. You will also gain a reputation of someone who is good to work with. This promotes better professional relationships and greater levels of trust, which can in turn lead to working on more exciting and impactful projects.
 
